@@ -19,6 +19,10 @@ HISTORY
 
   ++ New features:
 
+  2009-10-07 Simon Goldschmidt/Fabian Koch
+  * api_msg.c, netbuf.c/.h, opt.h: patch #6888: Patch for UDP Netbufs to
+    support dest-addr and dest-port (optional: LWIP_NETBUF_RECVINFO)
+
   2009-08-26 Simon Goldschmidt/Simon Kallweit
   * slipif.c/.h: bug #26397: SLIP polling support
 
